# ai

./: .gitignore  LICENSE  README.md  gui_app.py  package-lock.json  package.json  pyproject.toml
cldltest/: benchmark.py  cli.py  comparator.py  visualize_imported.py
cldltest/runners/: js_runner.js  js_runner_generic.js  python_runner.py  python_runner_generic.py  run_node_onnx_legacy.js  run_python_onnx_legacy.py
cldltest/runners/java_runner/: pom.xml
cldltest/runners/java_runner/src/main/java/: OnnxJavaRunner.java
cldltest/utils/: metrics.py
docs/: input_format.md  project_structure.md  roadmap.md
examples/cases/: mlp_inputs.json  regression_inputs.json
examples/models/: linear_model.onnx
models/mlp/: export_mlp_to_onnx.py  mlp_model.py  simple_mlp.onnx
models/regression/: export_to_onnx.py  simple_regression.onnx  simple_regression.py
outputs/: compare_js_java.json  compare_py_java.json  compare_py_js.json  java_result.json  js_result.json  python_result.json
tests/: README.md  compare_outputs.py
